# bolt

./: .gitignore  README.md  THREAT_MODEL.md  pyproject.toml  requirements.txt  run_attack_suite.py
.github/workflows/: tests.yml
attacks/: downgrade_attack.py  mitm_channel.py  power_loss_sim.py  strip_signature.py
bootloader/: ab_partition.py  cert_chain.py  flash.py  flash_ecu.py  rollback_store.py  verifier.py
detector/: dashboard.py  event_log.py
docs/: ARCHITECTURE.md
pipeline/: cli.py  image_builder.py  keygen.py  manifest.py  ota_metadata.py  pki.py
tests/: test_module10_ota_metadata.py  test_module1_pipeline.py  test_module2_verifier.py  test_module4_attacks.py  test_module5_event_log.py  test_module6_ab_partition.py  test_module7_cert_chain.py  test_module8_manifest.py  test_module9_flash.py
