[project]
name = "bolt"
version = "0.1.0"
description = "Boot & OTA Lockdown Toolkit — secure OTA update and boot integrity framework for automotive ECUs"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "cryptography>=42.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
bolt = "pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*", "bootloader*", "attacks*", "detector*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
